--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+#######################
+#         Mysql       #
+#######################
+spring.datasource.url=jdbc:mysql://54.254.44.39:3306/admin_red_sms
+# spring.datasource.url=jdbc:mysql://localhost:3306/springsecurity
+spring.datasource.username=admin_red_sms
+# spring.datasource.username=root
+spring.datasource.password=XEq5Tf6RJE
+# spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
