--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,32 @@ server.port=8080
 #######################
 #         Mysql       #
 #######################
-spring.datasource.url=jdbc:mysql://54.254.44.39:3306/admin_red_sms
-# spring.datasource.url=jdbc:mysql://localhost:3306/springsecurity
-spring.datasource.username=admin_red_sms
-# spring.datasource.username=root
-spring.datasource.password=XEq5Tf6RJE
-# spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://54.254.44.39:3306/admin_red_sms
+# # spring.datasource.url=jdbc:mysql://localhost:3306/springsecurity
+# spring.datasource.username=admin_red_sms
+# # spring.datasource.username=root
+# spring.datasource.password=XEq5Tf6RJE
+# # spring.datasource.password=password
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#######################
+#         Oracle       #
+#######################
+# HOST 54.254.44.39
+# POST 1521
+# SID ORCLCDB
+# ------------------------------
+# Schema : REDSMS
+# USER : redsms
+# PASS : myway2288
+# -----------------------------
+# Schema : REDDISTRIBUTE
+# USER : reddistribute
+# PASS : myway2288
+
+spring.datasource.url=jdbc:oracle:thin:@54.254.44.39:1521:ORCLCDB
+spring.datasource.username=redsms
+spring.datasource.password=myway2288
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
