--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 #######################
 #         Mysql       #
 #######################
