--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+server.tomcat.relaxed-query-chars=[,]
 #######################
 #         Mysql       #
 #######################
