--- a/src/main/resources/application-jboss-prod.properties
+++ b/src/main/resources/application-jboss-prod.properties
@@ -27,10 +27,7 @@ server.tomcat.relaxed-query-chars=[,]
 # Schema : REDDISTRIBUTE
 # USER : reddistribute
 # PASS : myway2288
-spring.datasource.url=jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=10.36.2.50)(PORT=1521))(ADDRESS=(PROTOCOL=TCP)(HOST=10.36.2.51)(PORT=1521))(ADDRESS=(PROTOCOL=TCP)(HOST=10.36.2.52)(PORT=1521))(ADDRESS=(PROTOCOL=TCP)(HOST=10.36.2.53)(PORT=1521))(ADDRESS=(PROTOCOL=TCP)(HOST=10.36.2.54)(PORT=1521))(ADDRESS=(PROTOCOL=TCP)(HOST=10.36.2.55)(PORT=1521))(ADDRESS=(PROTOCOL=TCP)(HOST=10.36.2.56)(PORT=1521)))(CONNECT_DATA=(SERVER=dedicated)(SERVICE_NAME=reddbdev)))
-spring.datasource.username=reddbsmsdev
-spring.datasource.password=mRY6utBi
 
-# Hibernate configuration
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.datasource.jndi-name=java:/REDDBSMS
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
