--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
-spring.profiles.active=local
+spring.profiles.active=jboss-prod
