--- a/src/main/resources/application-jboss-prod.properties
+++ b/src/main/resources/application-jboss-prod.properties
@@ -30,5 +30,5 @@ server.tomcat.relaxed-query-chars=[,]
 
 spring.datasource.jndi-name=java:/REDDBSMS
 spring.jpa.hibernate.ddl-auto=validate
-physicalNamingStrategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+physicalNamingStrategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 spring.jpa.show-sql=true
