--- a/src/main/resources/application-jboss-prod.properties
+++ b/src/main/resources/application-jboss-prod.properties
@@ -29,6 +29,6 @@ server.tomcat.relaxed-query-chars=[,]
 # PASS : myway2288
 
 spring.datasource.jndi-name=java:/REDDBSMS
-spring.jpa.hibernate.ddl-auto=validate
-physicalNamingStrategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
