--- a/src/main/resources/application-jboss-prod.properties
+++ b/src/main/resources/application-jboss-prod.properties
@@ -31,5 +31,5 @@ server.tomcat.relaxed-query-chars=[,]
 spring.datasource.jndi-name=java:/REDDBSMS
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
