--- a/src/main/resources/application-jboss-dev.properties
+++ b/src/main/resources/application-jboss-dev.properties
@@ -27,6 +27,7 @@ server.tomcat.relaxed-query-chars=[,]
 # Schema : REDDISTRIBUTE
 # USER : reddistribute
 # PASS : myway2288
+spring.jpa.schema=REDDBSMS
 spring.datasource.jndi-name=java:/REDSMSdevDS
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
