--- a/src/main/resources/application-jboss-prod.properties
+++ b/src/main/resources/application-jboss-prod.properties
@@ -27,9 +27,9 @@ server.tomcat.relaxed-query-chars=[,]
 # Schema : REDDISTRIBUTE
 # USER : reddistribute
 # PASS : myway2288
-
+spring.jpa.schema=REDDBSMS
 spring.datasource.jndi-name=java:/REDDBSMS
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=com.nt.red_sms_api.config.CustomPhysicalNamingStrategy
