--- a/src/main/resources/application-jboss-dev.properties
+++ b/src/main/resources/application-jboss-dev.properties
@@ -31,3 +31,4 @@ spring.jpa.schema=REDDBSMS
 spring.datasource.jndi-name=java:/REDSMSdevDS
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=com.nt.red_sms_api.config.CustomPhysicalNamingStrategy
