--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jackson.serialization.fail-on-self-references=false
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
-spring.profiles.active=jboss-prod
+spring.profiles.active=jboss-dev
