--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -27,7 +27,7 @@ server.tomcat.relaxed-query-chars=[,]
 # Schema : REDDISTRIBUTE
 # USER : reddistribute
 # PASS : myway2288
-
+spring.jpa.schema=REDSMS
 spring.datasource.url=jdbc:oracle:thin:@54.254.44.39:1521:ORCLCDB
 spring.datasource.username=redsms
 spring.datasource.password=myway2288
